# usbmagic

./: .gitattributes  Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md  FORENSICS.md  PD-TRACE.md  PROTOCOL.md
docs/linktypes/: LINKTYPE_USB_TYPE_C_PD.html
firmware/: README.md  VERSION  usbmagic-blinky.bit  usbmagic-pd-bridge.bit
scripts/: pull-gateware.sh
src/: capture.rs  device.rs  error.rs  lib.rs  main.rs  mock.rs  pcap.rs  pcapng.rs
src/backend/: cynthion.rs  mod.rs
src/flash/: mod.rs
src/host/: descriptors.rs  forensics.rs  mod.rs
src/pd/: link.rs  mod.rs  trace.rs
src/power/: mod.rs
